restructure project modal and fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   --color-toggle-bg: #a19194;
   --color-resume-button: #2d2d2d;
   --color-resume-button-hover: rgb(15, 15, 15);
-  --color-info-panel: rgba(0, 0, 0, 0.075);
+  --color-scrollbar: rgba(0, 0, 0, 0.199);
 
   /*TYPO*/
   --font-family: "Figtree";
@@ -52,6 +52,23 @@ html.dark-mode {
   --color-resume-button: #2d2d2d;
   --color-resume-button-hover: rgb(58, 58, 58);
   --color-info-panel: rgba(0, 0, 0, 0.075);
+}
+
+/* SCROLLBAR */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: var(--color-scrollbar);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar);
+  border-radius: 10px;
 }
 
 *:focus-visible {
@@ -349,9 +366,13 @@ body {
 }
 
 .modal-container {
-  @apply fixed inset-0 z-50 p-[32px] overflow-y-auto flex flex-col;
+  @apply fixed inset-0 z-50 overflow-hidden flex flex-col;
   animation: fadeIn 0.3s ease-in-out;
   background-color: var(--modal-bg-color);
+
+  .modal-scrollable {
+    @apply overflow-auto p-[32px] h-full flex flex-col;
+  }
 
   h2 {
     @apply mb-[8px];
@@ -390,8 +411,12 @@ body {
     @apply flex flex-col justify-between;
   }
 
+  .link-wrapper {
+    @apply mt-[32px] w-full flex justify-center flex-1 items-end;
+  }
+
   .external-link {
-    @apply link link-hover text-[var(--main-text-color)] w-fit m-auto flex gap-[8px] mt-[32px];
+    @apply link link-hover text-[var(--main-text-color)] w-fit flex gap-[8px];
   }
 }
 
